--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/daveismyname/laravel-filters",
     "keywords": ["Laravel", "Filter"],
     "require": {
-        "illuminate/support": "~5"
+        "illuminate/support": "5.5.x|5.6.x|5.7.x|5.8.x|6.x|7.x",
     },
     "autoload": {
         "psr-4": {
