--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
     "homepage": "https://github.com/daveismyname/laravel-filters",
     "keywords": ["Laravel", "Filter"],
     "require": {
-        "illuminate/support": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
-            "Daveismyname\\Filters\\": "src/"
+            "Daveismyname\\Filters\\": "src/",
+            "Daveismyname\\Filters\\Tests": "tests/"
         }
     },
     "extra": {
@@ -28,5 +30,9 @@
                 "Filters": "Daveismyname\\Filters\\Facades\\Filters"
             }
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "ext-json": "*"
     }
 }
