--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     "homepage": "https://github.com/daveismyname/laravel-filters",
     "keywords": ["Laravel", "Filter"],
     "require": {
-        "illuminate/support": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "laravel/framework": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
             "Daveismyname\\Filters\\": "src/",
-            "Daveismyname\\Filters\\Tests": "tests/"
+            "Daveismyname\\Filters\\Tests\\": "tests/"
         }
     },
     "extra": {
