--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "ext-json": "*"
+        "roave/security-advisories": "dev-latest",
+        "phpunit/phpunit": "^9.5"
     }
 }
