--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "keywords": ["Laravel", "Filter"],
     "require": {
         "ext-json": "*",
-        "laravel/framework": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0"
+        "laravel/framework": "^5.5|^5.6|^5.7|^5.8|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
